peac_dev/force-app/main/default/objects/Meter_Type__c/Meter_Type__c.object-meta.xml
<CustomObject>
    <label>Meter Type</label>
    <nameField>
        <displayFormat>MT-{000}</displayFormat>
        <label>Meter Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meter Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>