peac_dev/force-app/main/default/objects/Meter_Type__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipLabel>Meter Types</relationshipLabel>
    <relationshipName>Meter_Types</relationshipName>
    <type>Lookup</type>
</CustomField>