peac_dev/force-app/main/default/objects/Meter_Type__c/fields/Existing_Units__c.field-meta.xml
<CustomField>
    <fullName>Existing_Units__c</fullName>
    <label>Beginning Meter Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>