peac_dev/force-app/main/default/objects/Meter_Type__c/fields/Initial_Reading_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reading_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Beginning Meter Date</label>
    <type>Date</type>
</CustomField>