peac_dev/force-app/main/default/objects/Meter_Type__c/fields/Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Meter_Reading__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Meter Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>