peac_dev/force-app/main/default/objects/Meter_Type__c/fields/Meter_Type__c.field-meta.xml
<CustomField>
    <fullName>Meter_Type__c</fullName>
    <label>Meter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BW1</fullName>
                <label>Black And White</label>
            </value>
            <value>
                <fullName>C1</fullName>
                <label>Color</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>