peac_dev/force-app/main/default/objects/Meter_Type__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>Asset__r.Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model</label>
    <type>Text</type>
</CustomField>