peac_dev/force-app/main/default/objects/Meter_Type__c/fields/Overage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Overage_Percentage__c</fullName>
    <label>Overage Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>