peac_dev/force-app/main/default/objects/Meter_Type__c/fields/Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>