peac_dev/force-app/main/default/objects/Meter_Type__c/fields/Usage_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Usage_Allowance__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Minimum Monthly Images</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>