peac_dev/force-app/main/default/objects/Meter_Type__c/fields/Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rate__c</fullName>
    <label>Excess Image Charge</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>